[package]
name = "rapier3d-urdf"
version.workspace = true
authors.workspace = true
description = "URDF file loader for the 3D rapier physics engine."
documentation = "https://docs.rs/rapier3d-urdf"
homepage.workspace = true
repository.workspace = true
readme = "README.md"
categories.workspace = true
keywords = ["physics", "joints", "multibody", "robotics", "urdf"]
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
stl = ["dep:rapier3d-meshloader", "rapier3d-meshloader/stl", "__meshloader_is_enabled"]
collada = ["dep:rapier3d-meshloader", "rapier3d-meshloader/collada", "__meshloader_is_enabled"]
wavefront = ["dep:rapier3d-meshloader", "rapier3d-meshloader/wavefront", "__meshloader_is_enabled"]
## Private feature for detecting when meshloader is enabled by any of the file type features above.
__meshloader_is_enabled = []

[dependencies]
log.workspace = true
anyhow.workspace = true
bitflags.workspace = true
urdf-rs.workspace = true

rapier3d.workspace = true
rapier3d-meshloader = { workspace = true, optional = true }
