[package]
name = "rapier_testbed2d"
version.workspace = true
authors.workspace = true
description = "Testbed for the Rapier 2-dimensional physics engine in Rust."
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords = ["physics", "dynamics", "rigid", "real-time", "impulse_joints"]
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "rapier_testbed2d"
path = "../../src_testbed/lib.rs"
required-features = ["dim2"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim3", "f64"))',
] }
clippy = { needless_lifetimes = "allow" }

[features]
default = ["dim2"]
dim2 = []
parallel = ["rapier/parallel", "num_cpus"]
profiler_ui = ["dep:puffin_egui", "profiling/profile-with-puffin"]
# See https://github.com/dimforge/rapier/issues/760.
unstable-puffin-pr-235 = []

[package.metadata.docs.rs]
features = ["parallel", "profiler_ui"]

[dependencies]
nalgebra = { workspace = true, features = ["rand", "std"] }
glamx = { workspace = true, features = ["std", "all-types"] }
rand.workspace = true
rand_pcg.workspace = true
web-time.workspace = true
bitflags.workspace = true
num_cpus = { workspace = true, optional = true }
bincode.workspace = true
Inflector.workspace = true
md5.workspace = true
egui.workspace = true
profiling.workspace = true
puffin_egui = { workspace = true, optional = true }
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
indexmap.workspace = true
kiss3d.workspace = true
log.workspace = true
env_logger.workspace = true

[dependencies.rapier]
package = "rapier2d"
path = "../rapier2d"
version = "0.34.0"
features = ["serde-serialize", "debug-render", "profiler"]
