[package]
name = "rapier_testbed3d-f64"
version = "0.22.0"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Testbed for the Rapier 3-dimensional physics engine in Rust."
homepage = "http://rapier.rs"
repository = "https://github.com/dimforge/rapier"
categories = [
    "science",
    "game-development",
    "mathematics",
    "simulation",
    "wasm",
]
keywords = ["physics", "dynamics", "rigid", "real-time", "impulse_joints"]
license = "Apache-2.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "rapier_testbed3d"
path = "../../src_testbed/lib.rs"
required-features = ["dim3"]

[lints]
workspace = true

[features]
default = ["dim3"]
dim3 = []
parallel = ["rapier/parallel", "num_cpus"]

[package.metadata.docs.rs]
features = ["parallel"]

[dependencies]
nalgebra = { version = "0.33", features = ["rand", "glam025"] }
rand = "0.8"
rand_pcg = "0.3"
instant = { version = "0.1", features = ["web-sys", "now"] }
bitflags = "2"
num_cpus = { version = "1", optional = true }
crossbeam = "0.8"
bincode = "1"
md5 = "0.7"
Inflector = "0.11"
serde = { version = "1", features = ["derive"] }

bevy_egui = "0.26"
bevy_ecs = "0.13"
bevy_core_pipeline = "0.13"
bevy_pbr = "0.13"
bevy_sprite = "0.13"
#bevy_prototype_debug_lines = { version = "0.7", features = [ "3d" ] }

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "x11",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "bevy_render",
    "bevy_pbr",
    "bevy_gizmos",
] }

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_winit",
    "tonemapping_luts",
    "ktx2",
    "zstd",
    "bevy_render",
    "bevy_pbr",
    "bevy_gizmos",
] }
#bevy_webgl2 = "0.5"

[dependencies.rapier]
package = "rapier3d-f64"
path = "../rapier3d-f64"
version = "0.22.0"
features = ["serde-serialize", "debug-render", "profiler"]
