[package]
name = "rapier-py-3d-f64"
version.workspace = true
authors.workspace = true
description = "PyO3 extension module wrapping rapier3d-f64."
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "_rapier3d_f64"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
# Phase 11 — opt-in determinism build (see `rapier-py-3d` for rationale).
determinism = ["rapier3d-f64/enhanced-determinism"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39", "multiple-pymethods"] }
rapier-py-core = { path = "../rapier-py-core" }
# NB: the f64 engine crate has no `simd-stable` feature (SIMD via `wide` is
# f32-only), so this binding can't enable it.
rapier3d-f64 = { path = "../../crates/rapier3d-f64", features = ["serde-serialize", "debug-render"] }
# Phase 11 — Serialization, snapshots.
serde = { workspace = true, features = ["derive", "std"] }
bincode = { workspace = true }
serde_json = { workspace = true }
