[package]
name = "rapier_snippets_rust2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier2d = { version = "0.29", features = ["serde-serialize"] }
nalgebra = { version = "0.34" }
# Used for events handling
crossbeam = "0.8.4"
# Used For serialization
bincode = { version = "2.0.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
