[package]
name = "rapier_snippets_rust3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rapier3d = { version = "0.29", features = ["enhanced-determinism"] }
nalgebra = { version = "0.34", features = ["convert-glam029"] }
# Used to demonstrate compatibility.
glam = "0.29.3"
