[package]
name = "rapier_snippets_rust3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use the in-tree rapier so doc snippets are checked against local changes.
rapier3d = { path = "../../../../crates/rapier3d", features = ["enhanced-determinism"] }
nalgebra = { version = "0.35", features = ["convert-glam030"] }
# Used to demonstrate compatibility.
glam = "0.30"
